daemonset-master.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mydaemon
spec:
   selector:
     matchLabels:
      app: myapp
   template:
     metadata:
       labels:
          app: myapp
     spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
        tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule



            #   node-role.kubernetes.io/master:NoSchedule
