emptydir-vol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
spec:
   replicas: 3
   selector:
     matchLabels:
       app: myapp
   template:
     metadata:
       labels:
          app: myapp
     spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - name: myvol
            mountPath: /data-new
        - name: con2
          image: tomcat:latest
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: myvol
            mountPath: /data
        volumes:
        - name: myvol
          emptyDir: {}
