node-aff-req.yaml
apiVersion: v1
kind: Pod
metadata:
  name:  node-aff-req
  labels:
    app: mypod
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: cpu
            operator: NotIn  # change operator for anti affinity NotIn >> for affinity use operator In
            values:
            - ryzen
