node-selector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newpod-node-sel
  labels:
    app: mypod
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
  nodeSelector:
    cpu: ryzen
