nodename-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newpod
  labels:
    app: mypod
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
  nodeName: ip-172-20-54-253.ap-south-1.compute.internal
