pod-sec-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newpod
#  namespace: devops  you can define namespace is here as well
  labels:
    app: myapp
    env: dev
spec:
  securityContext:
    runAsUser: 3000
  containers:
  - image: ubuntu:latest
    name: con1
    command: ["sleep","10000"]
    securityContext:
      runAsUser: 1000
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
