pvc-vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newpod
#  namespace: devops  you can define namespace is here as well
  labels:
    app: myapp
    env: dev
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    volumeMounts:
    - name: myvol
      mountPath: /data
  volumes:
  - name: myvol
    persistentVolumeClaim: 
      claimName: mypvc
