init-contianer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
spec:
   replicas: 3
   selector:
     matchLabels:
       app: myapp
   template:
     metadata:
       labels:
          app: myapp
     spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - name: myvol
            mountPath: /usr/share/nginx/html
        volumes:
        - name: myvol
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  ports:
  - port: 80
    name: con1
    nodePort: 30123
  selector:
    app: myapp
  type: NodePort
