live-exec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newpod
  labels:
    app: myapp
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    livenessProbe:
      exec: 
        command: 
        - cat
        - /usr/share/nginx/html/index.html
      initialDelaySeconds: 8
      periodSeconds: 5
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: newpod-svc
spec:
  ports:
  - port: 80
    name: con1
  selector:
    app: myapp
