one.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newpod-node-sel
  labels:
    app: mypod
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
  nodeSelector:
    cpu: ryzen

apiVersion: v1
kind: Pod
metadata:
  name: newpod
  labels:
    app: mypod
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
  nodeName: ip-172-20-54-253.ap-south-1.compute.internal
apiVersion: v1
kind: Pod
metadata:
  name: newpod
  labels:
    app: mypod
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: newpod-svc
spec:
  ports:
  - port: 80
    nodePort: 30123
  selector:
    app: mypod
  type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: newpod-svc
spec:
  ports:
  - port: 80
    name: con1
    nodePort: 30123
  - port: 8080
    name: con2
    nodePort: 30124
  selector:
    app: mypod
  type: NodePort
