pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newpod
  labels:
    app: newapp
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: newpod-svc
spec:
  ports:
  - port: 80
    nodePort: 30123
  selector:
    app: mypod
  type: NodePort
