ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
spec:
   replicas: 3
   selector:
     matchLabels:
       app: myapp
   template:
     metadata:
       labels:
          app: myapp
     spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  ports:
  - port: 80
    name: con1
  selector:
    app: myapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mydep-ing
spec:
  ingressClassName: nginx
  rules:
  - host: "aneesh.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mydep-svc
            port:
              number: 80

    # read more about ingress https://kubernetes.io/docs/concepts/services-networking/ingress/
 #---
 #apiVersion: autoscaling/v1
 #kind: HorizontalPodAutoscaler
 #metadata:
 #  name: mydep-hpa
 #spec:
 #  maxReplicas: 10
 #  minReplicas: 3
 #  scaleTargetRef:
 #    apiVersion: apps/v1
 #    kind: Deployment
 #    name: mydep
 #  targetCPUUtilizationPercentage: 70
